<resources>
    <string name="app_name">TimeManagement</string>
    <string name="buttonText_add">添加</string>
    <string name="buttonText_edit">修改</string>
    <string name="addText_task_title">任务名：</string>
    <string name="addText_reward_title">奖励名：</string>
    <string name="addText_task_reward">奖励：</string>
    <string name="addText_reward_cost">花费：</string>
    <string name="addText_taskType">任务类型：</string>
    <string name="addText_task_limitCount">任务数量：</string>
    <string name="addText_reward_limitCount">奖励数量：</string>
    <string name="addText_task_tips">tips：\n1、普通任务数量是所需完成的次数\n2、每日任务数量是每日所需完成的数量\n3、每周任务是每周所需完成的数量\n4、奖励请输入正数</string>
    <string name="addText_reward_tips">tips：\n1、奖励数量是所能获得的上限次数\n2、花费请输入正数</string>
    <string name="tab1">任务</string>
    <string name="tab2">奖励</string>
    <string name="tab3">统计</string>
    <string name="tab4">更多</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="task0">全部任务</string>
    <string name="task1">普通任务</string>
    <string name="task2">每日任务</string>
    <string name="task3">每周任务</string>
    <string name="logIn">登录</string>
    <string name="rewardBalance">奖励余额</string>
    <string name="totalTask">任务总数</string>
    <string name="statistics">本月收入：\n本月支出：</string>
    <string-array name="task_types">
        <item>普通任务</item>
        <item>每日任务</item>
        <item>每周任务</item>
    </string-array>
</resources>