<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditRewardActivity">

    <LinearLayout
        android:id="@+id/rewardTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addText_reward_title" />

        <EditText
            android:id="@+id/rewardTitleEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/costLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rewardTitleLayout"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addText_reward_cost" />

        <EditText
            android:id="@+id/costEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rewardLimitCountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/costLayout"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/rewardLimitCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addText_reward_limitCount" />

        <EditText
            android:id="@+id/rewardLimitCountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/reward_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText_edit"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp" />

</RelativeLayout>